# Ndk-Android

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/deepcam/mtcnn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: MTCNN.cpp  dtracker.cpp  face-detect.cpp  native-lib.cpp
app/src/main/cpp/include/: FaceQuality.hpp  FaceQuality_private.hpp  dtracker.h
app/src/main/java/com/deepcam/detect/natives/: FaceDetectBean.java  FaceDetectNative.java
app/src/main/java/com/deepcam/mtcnn/: CameraActivity.java  MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/deepcam/mtcnn/: ExampleUnitTest.java
ndkbuild/: build.gradle
ndkbuild/src/androidTest/java/com/jellyan/mtcnn/: ExampleInstrumentedTest.java
ndkbuild/src/main/: AndroidManifest.xml
ndkbuild/src/main/jni/: Android.mk  Application.mk  FaceQuality.cpp  MTCNN.cpp  face-detect.cpp  native-lib.cpp
ndkbuild/src/main/jni/include/: MTCNN.h
ndkbuild/src/main/res/values/: strings.xml
ndkbuild/src/test/java/com/jellyan/mtcnn/: ExampleUnitTest.java
